--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,11 @@ classifiers = [
 ]
 author = "Charlie Marsh"
 author_email = "charlie.r.marsh@gmail.com"
-url = "https://github.com/charliermarsh/ruff"
 description = "An extremely fast Python linter, written in Rust."
 requires-python = ">=3.7"
+
+[project.urls]
+repository = "https://github.com/charliermarsh/ruff"
 
 [build-system]
 requires = ["maturin>=0.13,<0.14"]
