--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ common-path = { version = "1.0.0" }
 dirs = { version = "4.0.0" }
 fern = { version = "0.6.1" }
 filetime = { version = "0.2.17" }
-glob = "0.3.0"
-itertools = "0.10.3"
+glob = { version = "0.3.0" }
+itertools = { version = "0.10.3" }
 log = { version = "0.4.17" }
 notify = { version = "4.0.17" }
 once_cell = { version = "1.13.1" }
