--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,14 @@ edition = "2021"
 [lib]
 name = "ruff"
 
+[build-dependencies]
+cc="*"
+
 [dependencies]
 anyhow = { version = "1.0.60" }
 bincode = { version = "1.3.3" }
 cacache = { version = "10.0.1" }
+cc = "*"
 chrono = { version = "0.4.21" }
 clap = { version = "4.0.1", features = ["derive"] }
 clearscreen = { version = "1.0.10" }
@@ -33,6 +37,8 @@ rustpython-common = { git = "https://github.com/charliermarsh/RustPython.git", r
 serde = { version = "1.0.143", features = ["derive"] }
 serde_json = { version = "1.0.83" }
 toml = { version = "0.5.9" }
+tree-sitter = "0.20.9"
+tree-sitter-python = "0.20.2"
 update-informer = { version = "0.5.0", default_features = false, features = ["pypi"], optional = true }
 walkdir = { version = "2.3.2" }
 strum = { version = "0.24.1", features = ["strum_macros"] }
