--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ serde_json = { version = "1.0.83" }
 toml = { version = "0.5.9" }
 update-informer = { version = "0.5.0", default_features = false, features = ["pypi"], optional = true }
 walkdir = { version = "2.3.2" }
+strum = { version = "0.24.1", features = ["strum_macros"] }
+strum_macros = "0.24.3"
 
 [dev-dependencies]
 insta = { version = "1.19.1", features = ["yaml"] }
