--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ update-informer = { version = "0.5.0", default_features = false, features = ["py
 walkdir = { version = "2.3.2" }
 strum = { version = "0.24.1", features = ["strum_macros"] }
 strum_macros = "0.24.3"
+num-bigint = "0.4.3"
 
 [dev-dependencies]
 insta = { version = "1.19.1", features = ["yaml"] }
