--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ getrandom = { version = "0.2.7", features = ["js"] }
 [dev-dependencies]
 assert_cmd = { version = "2.0.4" }
 codegen = { version = "0.2.0" }
+criterion = { version = "0.4.0" }
 insta = { version = "1.19.1", features = ["yaml"] }
 test-case = { version = "2.2.2" }
 
@@ -69,3 +70,7 @@ opt-level = 3
 
 [profile.dev.package.similar]
 opt-level = 3
+
+[[bench]]
+name = "source_code_locator"
+harness = false
