--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-      - run: cargo build --release
+      - run: cargo build --all --release
 
   cargo_fmt:
     name: "cargo fmt"
@@ -49,7 +49,7 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-      - run: cargo fmt --check
+      - run: cargo fmt --all --check
 
   cargo_clippy:
     name: "cargo clippy"
@@ -71,7 +71,7 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-      - run: cargo clippy -- -D warnings
+      - run: cargo clippy --all -- -D warnings
 
   cargo_test:
     name: "cargo test"
@@ -93,7 +93,7 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-      - run: cargo test
+      - run: cargo test --all
 
   maturin_build:
     name: "maturin build"
