--- a/.github/workflows/playground.yaml
+++ b/.github/workflows/playground.yaml
@@ -34,6 +34,9 @@ jobs:
       - name: "Install Node dependencies"
         run: npm ci
         working-directory: playground
+      - name: "Run TypeScript checks"
+        run: npm run check
+        working-directory: playground
       - name: "Build JavaScript bundle"
         run: npm run build
         working-directory: playground
