--- a/playground/package.json
+++ b/playground/package.json
@@ -4,23 +4,34 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
+    "check": "npm run lint && npm run tsc",
+    "dev": "vite",
+    "fmt": "prettier --cache -w .",
+    "lint": "eslint --cache --ext .ts,.tsx src",
     "preview": "vite preview",
-    "push": "wrangler pages publish dist --project-name=ruff"
+    "tsc": "tsc"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.4.6",
     "lz-string": "^1.4.4",
     "monaco-editor": "^0.34.1",
-    "prettier": "^2.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "eslint": "^8.30.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.8.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
