Support single-line-exclusions setting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,3 +39,4 @@ strip = true
 force-wrap-aliases = true
 combine-as-imports = true
 force-single-line = true
+single-line-exclusions = ["os", "logging.handlers"]
