--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ walkdir = { version = "2.3.2" }
 clearscreen = { version = "1.0.10" }
 rayon = { version = "1.5.3" }
 update-informer = { version = "0.5.0", default-features = false, features = ["pypi"], optional = true }
+pyo3 = { version = "0.17.3", features = ["extension-module", "abi3", "abi3-py37", "anyhow"] }
 
 # https://docs.rs/getrandom/0.2.7/getrandom/#webassembly-support
 # For (future) wasm-pack support
@@ -111,3 +112,6 @@ opt-level = 1
 [[bench]]
 name = "source_code_locator"
 harness = false
+
+[package.metadata.maturin]
+name = "ruff._ruff"
