--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,18 +36,12 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
       - run: cargo build --all --release
-      - run: ./target/release/ruff_dev generate-rules-table
-      - run: ./target/release/ruff_dev generate-options
+      - run: ./target/release/ruff_dev generate-all
       - run: git diff --quiet README.md || echo "::error file=README.md::This file is outdated. Run 'cargo +nightly dev generate-all'."
-      - run: ./target/release/ruff_dev generate-check-code-prefix
       - run: git diff --quiet src/checks_gen.rs || echo "::error file=src/checks_gen.rs::This file is outdated. Run 'cargo +nightly dev generate-all'."
-      - run: git diff --exit-code -- README.md src/checks_gen.rs
-      - run: ./target/release/ruff_dev generate-json-schema
       - run: git diff --quiet ruff.schema.json || echo "::error file=ruff.schema.json::This file is outdated. Run 'cargo +nightly dev generate-all'."
-      - run: git diff --exit-code -- ruff.schema.json
-      - run: ./target/release/ruff_dev generate-playground-options
-      - run: git diff --quiet playground/src/ruff_options.rs || echo "::error file=playground/src/ruff_options.ts::This file is outdated. Run 'cargo +nightly dev generate-all'."
-      - run: git diff --exit-code -- README.md src/checks_gen.rs playground/src/ruff_options.ts
+      - run: git diff --quiet playground/src/ruff_options.ts || echo "::error file=playground/src/ruff_options.ts::This file is outdated. Run 'cargo +nightly dev generate-all'."
+      - run: git diff --exit-code -- README.md src/checks_gen.rs ruff.schema.json playground/src/ruff_options.ts
 
   cargo-fmt:
     name: "cargo fmt"
@@ -150,6 +144,7 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
       - uses: jetli/wasm-pack-action@v0.4.0
+      - uses: jetli/wasm-bindgen-action@v0.2.0
       - run: wasm-pack test --node
 
   maturin-build:
