--- a/.github/workflows/playground.yaml
+++ b/.github/workflows/playground.yaml
@@ -29,6 +29,7 @@ jobs:
           cache: "npm"
           cache-dependency-path: playground/package-lock.json
       - uses: jetli/wasm-pack-action@v0.4.0
+      - uses: jetli/wasm-bindgen-action@v0.2.0
       - name: "Run wasm-pack"
         run: wasm-pack build --target web --out-dir playground/src/pkg
       - name: "Install Node dependencies"
