--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -124,6 +124,8 @@ jobs:
   wasm-pack-test:
     name: "wasm-pack test"
     runs-on: ubuntu-latest
+    env:
+      WASM_BINDGEN_TEST_TIMEOUT: 60
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
