--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,14 @@ members = [
 [package]
 name = "ruff"
 version = "0.0.198"
+authors = ["Charlie Marsh <charlie.r.marsh@gmail.com>"]
 edition = "2021"
 rust-version = "1.65.0"
+documentation = "https://github.com/charliermarsh/ruff"
+homepage = "https://github.com/charliermarsh/ruff"
+repository = "https://github.com/charliermarsh/ruff"
+readme = "README.md"
+license = "MIT"
 
 [lib]
 name = "ruff"
