--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -118,12 +118,13 @@ jobs:
             ${{ runner.os }}-
       - run: pip install black[d]==22.12.0
       - run: |
-          INSTA_SNAPSHOT_REFERENCES_FILE="$(mktemp)"
+          export INSTA_SNAPSHOT_REFERENCES_FILE="$(mktemp)"
           cargo test --all
           UNUSED_SNAPSHOTS=$(cat <(git ls-files '*.snap' | xargs realpath) <(cat $INSTA_SNAPSHOT_REFERENCES_FILE) | sort | uniq -u)
           if [ ! -z "$UNUSED_SNAPSHOTS" ]; then
             echo "Found unused snapshots"
             echo "$UNUSED_SNAPSHOTS"
+            exit 1
           fi
       - run: cargo test --package ruff --test black_compatibility_test -- --ignored
 
